fix: scroll .app-main on overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
         display: flex;
         flex-direction: row;
         flex-grow: 1;
+        overflow-y: scroll;
     }
 
     &-navbar, &-sidebar {
